# parallax-scrolling-shader

./: .gitignore  Cargo.toml  Makefile  README.md  article.md  build.rs  rustfmt.toml
assets/: grass_single.gltf  icosphere.gltf  shader.frag  shader.frag.spv  shader.vert.spv
shaders/: shader.frag  shader.vert  standard_shader.vert
src/: app.rs  asset.rs  camera.rs  framework.rs  game.rs  gpu_primitives.rs  instance.rs  lib.rs  main.rs  model.rs  renderer.rs  scene.rs  sprite.rs  texture.rs  time.rs  world.rs
