[package]
name = "erlking"
version = "0.1.0"
authors = ["rishflab <rishflab@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.4", features = [ "derive" ] }
futures = "0.3"
winit = "0.24"
glam = "0.12"
log = "0.4"
wgpu = "0.7"
hecs = "0.3"
image = "0.23"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
rayon = "1.4"
shaderc = "0.6"